--- a/src/views/users/registro.ejs
+++ b/src/views/users/registro.ejs
@@ -9,7 +9,7 @@
     <%-include('../partials/header'); %>
 
     <h1 class="title text-center">Registro de Usuarios</h1>
-    <form action="/users/registro" method="post" class="form-register">
+    <form action="/users/registro" method="post" class="form-register" enctype="multipart/form-data">
         <label for="correo">Nombres</label>
         <input type="text" name="nombres" id="nombres" class="input-data" placeholder="Nombres Completos">
 
@@ -57,6 +57,9 @@
                 <li><input type="checkbox" name="interes" id="interes" class="input-data" value="reggaeton"></li>
             </ul>
         </div>
+
+        <label for="">Imagen</label>
+        <input type="file" name="imagenusuario" class="imagenusuario" accept=".jpg, .png, .jpeg">
 
         <div class="buttons">
             <input type="submit" value="Enviar" class="button">
