--- a/src/views/artistas/artista-especifico.ejs
+++ b/src/views/artistas/artista-especifico.ejs
@@ -9,7 +9,7 @@
     <section>
         <input type="text" name="search-bar" class="search-bar" placeholder="Buscar en WorldMusic...">
     </section>
-    <h2 class="text-center">Canciones de <%=datos.artista%></h2>
+    <h2 class="text-center">Canciones de <%= datos[ArtistaEspecifico[0].id- 1].artista%></h2>
     <section class="videos-usuario">
         <!--Videos que se recomiendan en la plataforma-->
         <!-- <video src="./video/video1.mp4" controls class=""></video> -->
