--- a/src/views/users/user-edit.ejs
+++ b/src/views/users/user-edit.ejs
@@ -17,18 +17,18 @@
     <% } %>
 
     <h1 class="title text-center">Modificacion de Usuarios - Usuario: <%= locals && locals.usuario ? usuario.nombres : ''%></h1>
-    <form action="/users/editar-usuario/<%= locals && locals.usuario ? usuario.id : usuario.id%>?_method=PUT" method="post" class="form-register">
+    <form action="/users/editar-usuario/<%= locals && locals.usuario ? usuario.id : 1%>?_method=PUT" method="post" class="form-register">
         <label for="correo">Nombres</label>
-        <input type="text" name="nombres" id="nombres" class="input-data" placeholder="Nombres Completos" value="<%= locals && locals.usuario ? usuario.nombres : '' %>">
+        <input type="text" name="nombres" id="nombres" class="input-data" placeholder="Nombres Completos" value="<%= locals && locals.usuario ? usuario.nombres : (locals && locals.old ? old.nombres : '') %>">
 
         <label for="apellidos">Apellidos</label>
-        <input type="text" name="apellidos" id="apellidos" class="input-data" placeholder="Apellidos Completos" value="<%= locals && locals.usuario ? usuario.apellidos : ''%>">
+        <input type="text" name="apellidos" id="apellidos" class="input-data" placeholder="Apellidos Completos" value="<%= locals && locals.usuario ? usuario.apellidos : (locals && locals.old ? old.apellidos : '')%>">
 
         <label for="correo">Telefono</label>
-        <input type="tel" name="telefono" id="telefono" class="input-data" placeholder="+573003000000" value="<%= locals && locals.usuario ? usuario.telefono : '' %>">
+        <input type="tel" name="telefono" id="telefono" class="input-data" placeholder="+573003000000" value="<%= locals && locals.usuario ? usuario.telefono : (locals && locals.old ? old.telefono : '') %>">
 
         <label for="correo">Correo</label>
-        <input type="email" name="email" id="email" class="input-data" placeholder="usuario@ejemplo.com" value="<%= locals && locals.usuario ?usuario.email : ''%>">
+        <input type="email" name="email" id="email" class="input-data" placeholder="usuario@ejemplo.com" value="<%= locals && locals.usuario ?usuario.email : (locals && locals.old ? old.email : '')%>">
 
         <label for="correo">Clave</label>
         <input type="password" name="clave" id="clave" class="input-data" placeholder="*****************">
@@ -38,36 +38,37 @@
 
         <label for="rol">Rol</label>
         <select name="roles" id="roles" class="options-roles">
-            <option value="administrador" <%= (locals && locals.usuario) && usuario.rol == 'administrador' ? 'selected' : null %>>Administrador</option>
-            <option value="espectador" <%= (locals && locals.usuario) && usuario.rol == 'espectador' ? 'selected' : null %>>Espectador</option>
+            <option value="0">--Seleccionar un Rol--</option>
+            <option value="administrador" <%= (locals && locals.usuario) && usuario.rol == 'administrador' ? 'selected' : (locals && locals.old ? 'selected' : '') %>>Administrador</option>
+            <option value="espectador" <%= (locals && locals.usuario) && usuario.rol == 'espectador' ? 'selected' : (locals && locals.old ? 'selected' : '') %>>Espectador</option>
         </select>
 
         <label for="correo">Intereses</label>
         <div class="cajitas-check">
             <ul class="part-one">
                 <label for="">Pop</label>
-                <li><input type="checkbox" name="interes" id="interes" class="input-data" value="pop" <%= (locals && locals.usuario) && usuario.interes.includes('pop') ? 'checked' : null %>></li>
+                <li><input type="checkbox" name="interes" id="interes" class="input-data" value="pop" <%= (locals && locals.usuario) && usuario.interes.includes('pop') ? 'checked' : (locals && locals.old) && old.interes.includes('pop') ? 'checked' : null %>></li>
                 <label for="">Pop Rock</label>
-                <li><input type="checkbox" name="interes" id="interes" class="input-data" value="pop-rock" <%= (locals && locals.usuario) && usuario.interes.includes('pop-rock') ? 'checked' : null %>></li>
+                <li><input type="checkbox" name="interes" id="interes" class="input-data" value="pop-rock" <%= (locals && locals.usuario) && usuario.interes.includes('pop-rock') ? 'checked' : (locals && locals.old) && old.interes.includes('pop-rock') ? 'checked' : null %>></li>
                 <label for="">Pop Romantico</label>
-                <li><input type="checkbox" name="interes" id="interes" class="input-data" value="pop-romantico" <%= (locals && locals.usuario) && usuario.interes.includes('pop-romantico') ? 'checked' : null %>></li>
+                <li><input type="checkbox" name="interes" id="interes" class="input-data" value="pop-romantico" <%= (locals && locals.usuario) && usuario.interes.includes('pop-romantico') ? 'checked' : (locals && locals.old) && old.interes.includes('pop-romantico') ? 'checked' : null %>></li>
                 <label for="">Romantico</label>
-                <li><input type="checkbox" name="interes" id="interes" class="input-data" value="romantico" <%= (locals && locals.usuario) && usuario.interes.includes('romantico') ? 'checked' : null %>></li>
+                <li><input type="checkbox" name="interes" id="interes" class="input-data" value="romantico" <%= (locals && locals.usuario) && usuario.interes.includes('romantico') ? 'checked' : (locals && locals.old) && old.interes.includes('romantico') ? 'checked' : null %>></li>
             </ul>
             <ul class="part-two">
                 <label for="">Rock</label>
-                <li><input type="checkbox" name="interes" id="interes" class="input-data" value="rock" <%= (locals && locals.usuario) && usuario.interes.includes('rock') ? 'checked' : null %>></li>
+                <li><input type="checkbox" name="interes" id="interes" class="input-data" value="rock" <%= (locals && locals.usuario) && usuario.interes.includes('rock') ? 'checked' : (locals && locals.old) && old.interes.includes('rock') ? 'checked' : null %>></li>
                 <label for="">Baladas</label>
-                <li><input type="checkbox" name="interes" id="interes" class="input-data" value="baladas" <%= (locals && locals.usuario) && usuario.interes.includes('baladas') ? 'checked' : null %>></li>
+                <li><input type="checkbox" name="interes" id="interes" class="input-data" value="baladas" <%= (locals && locals.usuario) && usuario.interes.includes('baladas') ? 'checked' : (locals && locals.old) && old.interes.includes('baladas') ? 'checked' : null %>></li>
                 <label for="">Salsa</label>
-                <li><input type="checkbox" name="interes" id="interes" class="input-data" value="salsa" <%= (locals && locals.usuario) && usuario.interes.includes('salsa') ? 'checked' : null %>></li>
+                <li><input type="checkbox" name="interes" id="interes" class="input-data" value="salsa" <%= (locals && locals.usuario) && usuario.interes.includes('salsa') ? 'checked' : (locals && locals.old) && old.interes.includes('salsa') ? 'checked' : null %>></li>
                 <label for="">Reggaeton</label>
-                <li><input type="checkbox" name="interes" id="interes" class="input-data" value="reggaeton" <%= (locals && locals.usuario) && usuario.interes.includes('reggaeton') ? 'checked' : null %>></li>
+                <li><input type="checkbox" name="interes" id="interes" class="input-data" value="reggaeton" <%= (locals && locals.usuario) && usuario.interes.includes('reggaeton') ? 'checked' : (locals && locals.old) && old.interes.includes('reggaeton') ? 'checked' : null %>></li>
             </ul>
         </div>
 
         <label for="">Imagen</label>
-        <input type="file" name="imagenusuario" class="imagenusuario" accept=".jpg, .png, .jpeg" value="<%= locals && locals.usuario ? usuario.imagenusuario : ''%>">
+        <input type="file" name="imagenusuariomodificado" class="imagenusuariomodificado" accept=".jpg, .png, .jpeg" value="<%= locals && locals.usuario ? usuario.imagenusuario : ''%>">
 
         <div class="buttons">
             <input type="submit" value="Enviar" class="button">
